@@ -71,6 +71,7 @@
 0	string		II\x2a\x00				image/tiff
 0	string		\x89PNG					image/png
 0	string		8BPS\ \ \000\000\000\000 &0xffffffff0000ffffffff image/x-psd
+0	string		#LyX					text/x-lyx
 
 # Desktop file support - slightly wrong, since comments can be before 
 # the [Desktop Entry] line in the current spec - probably should fix 
