@@ -1178,6 +1178,13 @@ text/x-ksh
 	can_be_executable=TRUE
 	_description=Korn shell script
 
+text/x-lyx
+	_description=LyX Document
+	default_action_type=application
+	short_list_application_ids_for_novice_user_level=lyx
+	short_list_application_ids_for_intermediate_user_level=lyx
+	short_list_application_ids_for_advanced_user_level=lyx
+
 text/x-makefile
 	_description=makefile
 
